Wed Mar 30 19:51:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

	* orbsvcs/orbsvcs/SSLIOP/ssl_endpoints.{h,cpp,i}:
	  Removed these generated files, replaced with the new files below

	* orbsvcs/orbsvcs/SSLIOP/ssl_endpoints.pidl:
	  Updated regeneration instructions

	* orbsvcs/orbsvcs/SSLIOP/ssl_endpointsC.{h,cpp,inl}:
	  New generated files

	* orbsvcs/orbsvcs/Makefile.am:
	  Updated for change above

Wed Mar 30 11:41:53 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_visitor_typecode/typecode_defn.cpp:

	  Generate an "extern" declaration for forward declared
	  interfaces.  Addresses cases where another TypeCode (e.g. for a
	  sequence) needs access to the interface TypeCode_ptr before it's
	  definition is generated.

	* TAO_IDL/be/be_visitor_typecode/typecode_defn.h
	  (visit_interface, visit_interface_fwd):

	  Uncommented.

	* tao/TypeCode.h:

	  Added missing TypeCode-specific Arg_Traits<> template
	  specializations that were inadvertently lost during merge.

	* tao/IFR_Client/IFR_BaseA.cpp:

	  Regenerated.

Wed Mar 30 19:41:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

	* TAO_IDL/be/be_codegen.cpp:
          Don't generate TAO_EXPORT_NESTED_MACRO, it is not used anymore

Wed Mar 30 19:32:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

	* tao/Strategies/uiop_endpoints.pidl:
	* tao/Strategies/sciop_endpoints.pidl:
	  Updated regeneration instructions

	* tao/Strategies/sciop_endpoints.{h,cpp,i}:
	* tao/Strategies/uiop_endpoints.{h,cpp,i}:
	  Removed these generated files, replaced with the new files below

	* tao/Strategies/sciop_endpointsC.{h,cpp,inl}:
	* tao/Strategies/uiop_endpointsC.{h,cpp,inl}:
	  New generated files

	* tao/Makefile.am:
	  Updated for changes above

Wed Mar 30 11:18:18 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/Enum_TypeCode.inl:
	* tao/Struct_TypeCode.inl:
	* tao/TypeCode_Base_Attributes.inl:
	* tao/Union_TypeCode.inl:
	* tao/Value_TypeCode.inl:
